Fix footer spacing and copy

--- a/extras/dev/assets/less/makerbase.less
+++ b/extras/dev/assets/less/makerbase.less
@@ -431,7 +431,8 @@ form.form-inline {
 	min-height: 200px;
 	font-size: smaller;
 	margin-top: 60px;
-	padding-top: 40px;
+	padding-top: 60px;
+	padding-bottom: 140px;
 
 	a {
 		color: white;
